--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>LOVE</title>
+    <title>Trần Thị Hải</title>
     
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     
