--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         <div class="icon">
             <div class="facebook">
                 <h2>Facebook</h2>
-                <a href="https://www.facebook.com/hai.tranthi.75033/"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.facebook.com/hai.tranthi.75033/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
             </div>
             <div class="instagram">
                 <h2>instagram</h2>
-                <a href="https://www.instagram.com/_haritr/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/_haritr/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <div class="youtube">
                 <h2>Youtube</h2>
-                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
         
-        <div  id= "photo" class="photo-text">
+        <div id= "photo" class="photo-text">
             <h1><span class="auto-text3"></h1>
         </div>
 
@@ -95,12 +95,12 @@
 
     <div class="contact-content">
         <h2>Hoa đã có chủ vui lòng không liên hệ nếu ko vì lý do công việc</h2>
-        <h2>Hoặc có thể liên hệ với chủ của hoa: <a href="https://www.facebook.com/tranvanquyen.01/">facebook/tranvanquyen.01</a></h2>
+        <h2>Hoặc có thể liên hệ với chủ của hoa: <a href="https://www.facebook.com/tranvanquyen.01/" target="_blank">facebook/tranvanquyen.01</a></h2>
     </div>
 	
 	<script>
 		var typed = new Typed(".auto-text", {
-			strings: ["Trần Thị Hải", "Hải Cute"],
+			strings: ["Trần Thị Hải", "Hải Cute", "Người Yêu TVQ"],
 			typeSpeed: 150, 
 			backSpeed: 150,
 			loop: true
