--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	
 	<script>
 		var typed = new Typed(".auto-text", {
-			strings: ["Trần Thị Hải", "Hải Cute", "Người Yêu TVQ"],
+			strings: ["Trần Thị Hải", "Hải Cute", "NY TVQ"],
 			typeSpeed: 150, 
 			backSpeed: 150,
 			loop: true
