--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body >
     <div class="content-body">
         <div class="navbar">
-            <marquee id = "welcome">HELLO ! WELCOME TO MY WEBSITE !!! </marquee>
+            <marquee id = "welcome mt-1">HELLO ! WELCOME TO MY WEBSITE !!! </marquee>
             <h1><span class="auto-text"></h1>
             
             <div class="bootrap">
