--- a/index.html
+++ b/index.html
@@ -100,9 +100,6 @@
             </div>    
         </div>
 
-
-
-
         <div class="love-for">
             <div class="box">
                 <div class="form10"></div>
@@ -135,6 +132,30 @@
             </div>
             <div class="box">
                 <div class="form18"></div>
+            </div>    
+        </div>
+
+        <div class="love-seven">
+            <div class="box">
+                <div class="form19"></div>
+            </div>
+            <div class="box">
+                <div class="form20"></div>
+            </div>
+            <div class="box">
+                <div class="form21"></div>
+            </div>    
+        </div>
+
+        <div class="love-eight">
+            <div class="box">
+                <div class="form22"></div>
+            </div>
+            <div class="box">
+                <div class="form23"></div>
+            </div>
+            <div class="box">
+                <div class="form24"></div>
             </div>    
         </div>
 
