fix link add icon instagram

--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
             <button type="button" class="btn btn-danger m-3 px-11 py-3 font-bold text-xl"><h1><span class="auto-text2 text-center"></h1></button>
             <div class="icon-about justify-center mt-4 flex flex-col sm:flex-row">
                 <div class="fb mx-5 my-4">
-                    <i class="fa-brands fa-facebook text-6xl mb-2 text-blue-600"></i>
+                    <a href="https://www.facebook.com/hai.tranthi.75033/"><i class="fa-brands fa-facebook text-6xl mb-2 text-blue-600"></i></a>
                     <p class="font-bold text-xl text-red-500">Facebook</p>
                 </div>
                 <div class="tiktok mx-5 my-4">
-                    <i class="fa-brands fa-tiktok text-6xl mb-2 text-black"></i>
+                    <a href="https://www.tiktok.com/@_haritr"><i class="fa-brands fa-tiktok text-6xl mb-2 text-black"></i></a>
                     <p class="font-bold text-xl text-red-500">Tiktok</p>
                 </div>
+                <div class="insta mx-5 my-4">
+                    <a href="https://www.instagram.com/_haritr/"><i class="fa-brands fa-instagram text-6xl mb-2 text-orange-700"></i></a>
+                    <p class="font-bold text-xl text-red-500">Youtube</p>
+                </div>
                 <div class="youtube mx-5 my-4">
-                    <i class="fa-brands fa-youtube text-6xl mb-2 text-red-600"></i>
+                    <a href="https://www.youtube.com/channel/UCPAcdfAVNhvEaTxdyOwHlqQ"><i class="fa-brands fa-youtube text-6xl mb-2 text-red-600"></i></a>
                     <p class="font-bold text-xl text-red-500">Youtube</p>
                 </div>
             </div>
@@ -66,7 +70,7 @@
                 <h3 class="text-2xl font-bold text-red-500 pt-2">TRẦN THỊ HẢI</h3>
                 <h4 class="text-sm font-bold text-red-500 pt-2">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
                 <p class="copy-right text-center text-red-500 pt-2">&copy; 2024. Thiết kế bởi
-					<a href="#"> Trần Văn Quyền</a>
+					<a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
 				</p>
         </footer>
     </div>
