--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
         <div id= "about"class="about text-center">
             <button type="button" class="btn btn-primary m-3 px-11 py-3 font-bold text-xl">
-                <h1 class=""><span class="auto-text1"></h1>
+                <h1 class=""><span class="auto-text1 text-xl"></h1>
             </button>
             <h2 class="font-bold text-red-500 text-3xl mt-2">Trần Thị Hải</h2>
-            <h2 class="font-bold text-red-500 text-3xl mt-2">K63 - GDTH - Đại học Vinh</h2>
+            <h2 class="font-bold text-red-500 text-3xl mt-2">2004 - K63</h2>
+            <h2 class="font-bold text-red-500 text-3xl mt-2">GDTH - Đại học Vinh</h2>
             <h2 class="font-bold text-red-500 text-3xl mt-2">Yên Thành - Nghệ An</h2>
         </div>
     
@@ -69,7 +70,8 @@
         <footer class="the-end text-center bg-cyan-300 p-3">
                 <h3 class="text-2xl font-bold text-red-500 pt-2">TRẦN THỊ HẢI</h3>
                 <h4 class="text-sm font-bold text-red-500 pt-2">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
-                <p class="copy-right text-center text-red-500 pt-2">&copy; 2024. Thiết kế bởi
+                <h4 class="text-sm font-bold text-red-500 pt-2">MY LOVE - TRAN VAN QUYEN</h4>
+                <p class="copy-right text-center text-red-500 pt-2">&copy; 2024. Copyright
 					<a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
 				</p>
         </footer>
