--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">HELLO ! WELCOME TO MY WEBSITE !!! </marquee>
         </div>
         <h1 class="text-center m-5 text-red-500 text-5xl font-bold">
-            <span class="auto-text">
+            <span class="auto-text text-2xl">
         </h1>
 
         <div id= "about"class="about text-center">
             <button type="button" class="btn btn-primary m-3 px-11 py-3 font-bold text-xl">
-                <h1 class=""><span class="auto-text1 text-xl"></h1>
+                <h1 class=""><span class="auto-text1"></h1>
             </button>
             <h2 class="font-bold text-red-500 text-3xl mt-2">Trần Thị Hải</h2>
             <h2 class="font-bold text-red-500 text-3xl mt-2">2004 - K63</h2>
