--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">HELLO ! WELCOME TO MY WEBSITE !!! </marquee>
         </div>
         <h1 class="text-center m-5 text-red-500 text-5xl font-bold">
-            <span class="auto-text text-2xl">
+            <span class="auto-text text-3xl font-bold">
         </h1>
 
         <div id= "about"class="about text-center">
