update text white

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         </div>
         <div class="profile-all flex justify-center items-center shadow-gray-50">
             <div class="button-profile hidden sm:flex justify-center mt-3">
-                <a href="#about"><button type="button" class="bg-blue-500 shadow-lg shadow-blue-500/50 mx-3 py-3 px-11 font-bold text-xl hover:scale-110">About</button></a>
-                <a href="#icon"><button type="button" class="bg-red-500 shadow-lg shadow-red-500/50 mx-3 py-3 px-11 font-bold text-xl hover:scale-110">Profile</button></a>
-                <a href="#photo"><button type="button" class="bg-green-500 shadow-lg shadow-green-500/50 mx-3 py-3 px-11 font-bold text-xl hover:scale-110">Image</button></a>
+                <a href="#about"><button type="button" class="bg-blue-500 shadow-lg shadow-blue-500/50 mx-3 py-3 px-11 font-bold text-xl text-white hover:scale-110">About</button></a>
+                <a href="#icon"><button type="button" class="bg-red-500 shadow-lg shadow-red-500/50 mx-3 py-3 px-11 font-bold text-xl text-white hover:scale-110">Profile</button></a>
+                <a href="#photo"><button type="button" class="bg-green-500 shadow-lg shadow-green-500/50 mx-3 py-3 px-11 font-bold text-xl text-white hover:scale-110">Image</button></a>
             </div>
         </div>
         <div id= "about"class="about text-center mt-3">
             <button type="button" class="bg-blue-500 shadow-lg shadow-blue-500/50 m-3 px-11 py-3 font-bold text-xl hover:scale-110">
-                <h1 class=""><span class="auto-text1">About</h1>
+                <h1 class=""><span class="auto-text1 text-white">About</h1>
             </button>
             <h2 class="font-bold text-red-500 text-3xl mt-3">Trần Thị Hải</h2>
             <h2 class="font-bold text-red-500 text-2xl mt-2">2004 - K63</h2>
@@ -39,7 +39,7 @@
     
         <div id= "icon" class="icon-text text-center mt-4">
             <button type="button" class="bg-red-500 shadow-lg shadow-red-500/50 m-3 px-11 py-3 font-bold text-xl hover:scale-110">
-                <h1><span class="auto-text2 text-center">Profile</h1>
+                <h1><span class="auto-text2 text-center text-white">Profile</h1>
             </button>
             <div class="icon-about justify-around mt-4 lg:flex">
                 <div class="fb mx-5 my-4">
@@ -62,7 +62,7 @@
         </div>
         
         <div id= "photo" class="photo-text text-center mt-4">
-            <button type="button" class="bg-green-500 shadow-lg shadow-green-500/50 px-11 py-3 font-bold text-xl hover:scale-110"><h1><span class="auto-text3">Image</h1></button>
+            <button type="button" class="bg-green-500 shadow-lg shadow-green-500/50 px-11 py-3 font-bold text-xl hover:scale-110"><h1><span class="auto-text3 text-white">Image</h1></button>
         </div>
 
         <!-- Hien thi anh theo js bo cuc grid -->
