update happy birthday 27-07-2024

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body >
     <div class="content-body bg-pink-300">
         <div class="navbar bg-pink-500">
-            <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">HELLO ! WELCOME TO MY WEBSITE !!! </marquee>
+            <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">27/07/2004 CHÚC MỪNG SINH NHẬT EM !!!</marquee>
         </div>
         <div class="profile-all flex justify-center items-center shadow-gray-50">
             <div class="button-profile hidden sm:flex justify-center mt-3">
