--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body >
     <div class="content-body bg-pink-300">
         <div class="navbar bg-pink-500">
-            <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">27/07/2004 CHÚC MỪNG SINH NHẬT EM !!!</marquee>
+            <marquee id = "welcome" class="p-2 font-bold text-2xl text-white">MỘT NGÀY NÀO ĐÓ EM VÀO VÀ XEM LẠI WEBSITE NÀY THÌ HÃY NHỚ RẰNG KHOẢNG THỜI GIAN ĐÓ TUY RẤT NGẮN VÀ KẾT QUẢ CHÚNG TA KHÔNG THỂ ĐI CÙNG NHAU NỮA NHƯNG LUÔN CÓ MỘT NGƯỜI YÊU EM RẤT NHIỀU - HÃY NHẮN CHO ANH BẤT KỲ LÚC NÀO EM CẦN VÌ ANH VẪN SẼ CHỜ EM VTL NK !</marquee>
         </div>
         <div class="profile-all flex justify-center items-center shadow-gray-50">
             <div class="button-profile hidden sm:flex justify-center mt-3">
