fix logo - fix grid image

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <a href="#about"><button type="button"
                 class="bg-yellow-400 shadow-lg shadow-yellow-500/50 mx-3 py-3 px-11 font-bold text-xl text-white hover:scale-110">Logo</button></a>
         </div>
-        <div class="logo grid justify-center items-center sm:flex">
+        <div class="logo grid justify-center items-center sm:flex m-w[100px]">
             <div class="image-logo flex my-2">
-                <img src="Image/Logo.png" alt="" class="mx-2 w-[100px]">
-                <img src="Image/logo-black-number.png" alt="" class="mx-2 w-[100px]">
+                <img src="Image/Logo.png" alt="" class="mx-2 min-w-[50px] max-w-[150px]">
+                <img src="Image/logo-black-number.png" alt="" class="mx-2 min-w-[50px] max-w-[150px]">
             </div>
             <div class="image-logo flex my-2">
-                <img src="Image/Logo-black.png" alt="" class="mx-2 w-[100px]">
-                <img src="Image/logo-number.png" alt="" class="mx-2 w-[100px]">
+                <img src="Image/logo-number.png" alt="" class="mx-2 min-w-[50px] max-w-[150px]">
+                <img src="Image/Logo-black.png" alt="" class="mx-2 min-w-[50px] max-w-[150px]">
             </div>
         </div>
         <div class="profile-all flex justify-center items-center shadow-gray-50">
