fix marquee - fix view reposive

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="content-body bg-pink-300">
         <div class="navbar bg-pink-500">
-            <marquee id="welcome" class="p-2 font-bold text-2xl text-white">CHÀO MỪNG BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
+            <marquee id="welcome" behavior="alternate" direction="left" scrollamount="15" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
         </div>
         <div class="button-logo flex justify-center my-3">
@@ -96,7 +96,7 @@
         </div>
 
         <!-- Hiển thị ảnh theo bố cục Grid của Js -->
-        <div id="image-grid" class="grid grid-cols-1 mx-auto max-w-[90%] gap-[20px] px-5 py-5 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-2 2xl:grid-cols-3">
+        <div id="image-grid" class="grid grid-cols-1 mx-auto max-w-[90%] gap-[30px] py-5 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4">
 
         </div>
 
