--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="content-body bg-pink-300">
         <div class="navbar bg-pink-500">
-            <marquee id="welcome" behavior="alternate" direction="left" scrollamount="15" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
+            <marquee id="welcome" scrollamount="10" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
         </div>
         <div class="button-logo flex justify-center my-3">
