--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
         </div>
 
         <footer class="the-end text-center bg-cyan-300 p-3">
-            <h3 class="text-2xl font-bold text-red-500 pt-2">TRẦN THỊ HẢI</h3>
-            <h4 class="text-sm font-bold text-red-500 pt-2">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
-            <h4 class="text-sm font-bold text-red-500 pt-2">PROPERTY OF TRAN VAN QUYEN</h4>
-            <p class="copy-right text-center text-red-500 pt-2">&copy; 2024. Copyright
+            <h3 class="text-xl font-bold text-red-500">TRẦN THỊ HẢI</h3>
+            <h4 class="text-xs font-bold text-red-500">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
+            <h4 class="text-xs font-bold text-red-500">PROPERTY OF TRAN VAN QUYEN</h4>
+            <h4 class="text-xs font-bold text-red-500 ">964.600.518</h4>
+            <p class="copy-right text-xs text-center text-red-500">&copy; 2024. Copyright
                 <a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
             </p>
         </footer>
