fix icon profile

--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
                 class="bg-red-500 shadow-lg shadow-red-500/50 m-3 px-11 py-3 font-bold text-xl hover:scale-110">
                 <h1><span class="auto-text2 text-center text-white">Profile</h1>
             </button>
-            <div class="icon-about justify-around mt-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4">
-                <div class="fb mx-5 my-4">
+            <div class=" icon-about justify-center mx-auto max-w-[80%] mt-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4">
+                <div class="fb my-4">
                     <a href="https://www.facebook.com/hai.tranthi.75033/"><i
                             class="fa-brands fa-facebook text-9xl mb-2 text-blue-600"></i></a>
                     <p class="font-bold text-xl text-red-600">Facebook</p>
                 </div>
-                <div class="tiktok mx-5 my-4">
+                <div class="tiktok my-4">
                     <a href="https://www.tiktok.com/@_haritr"><i
                             class="fa-brands fa-tiktok text-9xl mb-2 text-black"></i></a>
                     <p class="font-bold text-xl text-red-600">Tiktok</p>
                 </div>
-                <div class="insta mx-5 my-4">
+                <div class="insta my-4">
                     <a href="https://www.instagram.com/_haritr/"><i
                             class="fa-brands fa-instagram text-9xl mb-2 text-orange-700"></i></a>
                     <p class="font-bold text-xl text-red-600">Instagram</p>
                 </div>
-                <div class="youtube mx-5 my-4">
+                <div class="youtube my-4">
                     <a href="https://www.youtube.com/channel/UCPAcdfAVNhvEaTxdyOwHlqQ"><i
                             class="fa-brands fa-youtube text-9xl mb-2 text-red-600"></i></a>
                     <p class="font-bold text-xl text-red-600">Youtube</p>
@@ -96,7 +96,7 @@
         </div>
 
         <!-- Hiển thị ảnh theo bố cục Grid của Js -->
-        <div id="image-grid" class="grid grid-cols-1 mx-auto max-w-[90%] gap-[30px] py-5 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4">
+        <div id="image-grid" class="grid grid-cols-1 mt-4 mx-auto max-w-[90%] gap-[30px] py-5 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4">
 
         </div>
 
