--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <!-- Title -->
-    <title>Trần Thị Hải</title>
+    <title>My Love</title>
 </head>
 
 <body>
-    <div class="content-body bg-pink-300 cursor">
+
+    <div class="content-body hidden bg-pink-300 cursor">
         <div class="navbar bg-pink-500">
             <marquee id="welcome" scrollamount="10" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
@@ -110,7 +111,6 @@
             </p>
         </footer>
     </div>
-
     <script src="script.js"></script>
 </body>
 
