remove hidden class content body

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 
 <body>
-
-    <div class="content-body hidden bg-pink-300 cursor">
+    <div class="content-body bg-pink-300 cursor">
         <div class="navbar bg-pink-500">
             <marquee id="welcome" scrollamount="10" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
@@ -97,9 +96,8 @@
 
         <!-- Hiển thị ảnh theo bố cục Grid của Js -->
         <div id="image-grid" class="grid grid-cols-1 mt-4 mx-auto max-w-[90%] gap-[30px] py-5 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4">
-
         </div>
-
+        
         <footer class="the-end text-center bg-cyan-300 p-3">
             <h3 class="text-xl font-bold text-red-500">TRẦN THỊ HẢI</h3>
             <h4 class="text-xs font-bold text-red-500">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
