--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <div class="content-body bg-pink-300 cursor">
+    <div id="loading" class="loader">Loadding...</div>
+    <div id="content" class="content-body bg-pink-300 cursor" style="visibility: hidden;">
         <div class="navbar bg-pink-500">
             <marquee id="welcome" scrollamount="10" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
