Remove pass - loading add button back top

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 
 <body>
-    <div id="loading" class="loader">Loadding...</div>
-    <div id="content" class="content-body bg-pink-300 cursor" style="visibility: hidden;">
+    <div id="content" class="content-body bg-pink-300 cursor"">
         <div class="navbar bg-pink-500">
             <marquee id="welcome" scrollamount="10" class="pt-[12px] pb-[10px] font-bold text-2xl text-white">CHÀO MỪNG CÁC BẠN ĐÃ ĐẾN VỚI WEBSITE CỦA MÌNH
                 !!!</marquee>
@@ -108,6 +107,9 @@
                 <a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
             </p>
         </footer>
+        <div class="back-top fixed text-[30px] bottom-[5px] right-[10px] text-white" onclick="scrollToTop()" id="backToTopBtn">
+            <i class="fa-solid fa-circle-chevron-up"></i>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
