--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h4 class="text-xs font-bold text-red-500">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
             <h4 class="text-xs font-bold text-red-500">PROPERTY OF TRAN VAN QUYEN</h4>
             <h4 class="text-xs font-bold text-red-500 ">964.600.518</h4>
-            <p class="copy-right text-xs text-center text-red-500">&copy; 2024. Copyright
+            <p class="copy-right text-xs text-center text-red-500">&copy; 2024. Code by
                 <a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
             </p>
         </footer>
