--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Css -->
     <link rel="stylesheet" href="style.css">
     <!-- Title -->
-    <title>My Love</title>
+    <title>Trần Thị Hải</title>
 </head>
 
 <body>
@@ -101,10 +101,9 @@
         <footer class="the-end text-center bg-cyan-300 p-3">
             <h3 class="text-xl font-bold text-red-500">TRẦN THỊ HẢI</h3>
             <h4 class="text-xs font-bold text-red-500">YÊN THÀNH - NGHỆ AN - VIỆT NAM</h4>
-            <h4 class="text-xs font-bold text-red-500">PROPERTY OF TRAN VAN QUYEN</h4>
             <h4 class="text-xs font-bold text-red-500 ">964.600.518</h4>
             <p class="copy-right text-xs text-center text-red-500">&copy; 2024. Code by
-                <a href="https://www.facebook.com/tranvanquyen.01/"> Trần Văn Quyền</a>
+                <a href="https://www.facebook.com/tranvanquyen.01/" class="hover:text-blue-500"> Trần Văn Quyền</a>
             </p>
         </footer>
         
